--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
 private/
-build/
 .vscode/
+
+# CMake and build files
+build/
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+Makefile
+
+# Compiled Object files
+*.o
+*.obj
+
+# Executables
+*.exe
+file_hasher
+
+# Other common files to ignore
+*.DS_Store
+*.suo
+*.user
+*.aps
+*.ncb
+*.swp
+
