adding a threadpool class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,11 @@ project(FileHasher CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Creating our executable from the main.cpp source file
-add_executable(file_hasher src/main.cpp)
+# Create our executable from main.cpp and ThreadPool.cpp
+add_executable(file_hasher 
+    src/main.cpp 
+    src/ThreadPool.cpp
+)
 
 # Telling CMake where to find our header files
 target_include_directories(file_hasher PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
